--- a/fishy_business.html
+++ b/fishy_business.html
@@ -23,7 +23,7 @@
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="future_scape.html">Future Scape</a></li>
 						<li><a href="unstable_star.html">Unstable Star</a></li>
-						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
+						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html" class="active">Fishy Business</a></li>
