--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 									</p>
 									<!-- Make progress bars for coding languages used here -->
 									<ul class="actions">
-										<li><a href="hells_kitchen.html" class="button">More Details</a></li>
+										<li><a href="the_devils_diner.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
