--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -23,7 +23,7 @@
 						<li><a href="rogue_nebula.html" class="active">Rogue Nebula</a></li>
 						<li><a href="future_scape.html">Future Scape</a></li>
 						<li><a href="unstable_star.html">Unstable Star</a></li>
-						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
+						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -41,17 +41,19 @@
 						<div class="inner">
 							<!-- Project Title -->
 							<h1 class="major">Rogue Nebula</h1>
-							<!-- Project Summary -->
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
+							<!-- Project Summary -->
 							<h2>Summary</h2>
-							<p> Developed during the summer session of the Video Game Development Club, <em>Rogue Nebula</em> challenges players to survive endless waves of enemies while aiming for a high score.
-								Heavily inspired by classic arcade titles like <em>Galaga</em>, <em>Defender (1981)</em>, and <em>Space Invaders</em>, the game features a scrolling 3D environment, reactive UI, vibrant special 
-								effects, and diverse enemy behaviors.
+							<p> 
+								Developed during the summer session of the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>, <em>Rogue Nebula</em> challenges players to survive endless 
+								waves of enemies while aiming for a high score. Heavily inspired by classic arcade titles like <em>Galaga</em>, <em>Defender (1981)</em>, and <em>Space Invaders</em>, the game features a scrolling 3D 
+								environment, reactive UI, vibrant special effects, and diverse enemy behaviors.
 							</p>
 							<!-- Gameplay Description -->
 							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
-							<p> The player begins by entering their name for a leaderboard entry; if a name is not selected, they are labeled "anonymous." When start is pressed the player is thrust into
+							<p> 
+								The player begins by entering their name for a leaderboard entry; if a name is not selected, they are labeled "anonymous." When start is pressed the player is thrust into
 								battle immediately as endless waves of enemies barrage the screen. To survive, players must dodge incoming projectiles and retaliate with the weapons in their arsonal. To aid survival, players 
 								can use special abilities and select a wide arrange of weapons. Every eight waves, the difficulty increases, with the hardest level starting after wave sixteen. Enemies will 
 								continue to scale with the difficulety keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
@@ -125,7 +127,6 @@
 							</ul>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
