--- a/the_devils_diner.html
+++ b/the_devils_diner.html
@@ -23,7 +23,7 @@
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="future_scape.html">Future Scape</a></li>
 						<li><a href="unstable_star.html">Unstable Star</a></li>
-						<li><a href="hells_kitchen.html" class="active">The Devil's Diner</a></li>
+						<li><a href="the_devils_diner.html" class="active">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -39,20 +39,27 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Project Title -->
 							<h1 class="major">The Devil's Diner</h1>
-							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
 							<span class="image fit"><img src="images/devil_gameplay.gif" alt="" /></span>
-							<h2>Summary</h2>
-							<p>The Devil's Diner, originally called Hell's Kitchen, is a game I made with a small team of programmers for the contest Ludum Dare #50. Ludum Dare is a contest where you are given 72 hours to
-								create a small game based on a particular theme. The theme choosen for this jam was "Every 10 Seconds" so we decided to create a cooking game where Every
-								10 seconds a new customer comes in. To put a spin on genre we decided to make the game Hell Themed where the player must serve demons in order to survive.
-							</p>
 							<span class="image fit"><img src="images/devil_gameplay_2.gif" alt="" /></span>
-							<h2>Gameplay</h2>
-							<p>As the player, you are given 5 stars at the beginning and you will lose stars by not serving customers in the time given. There are six stools which can
-								can each house a demon, once the demon approaches their stool an order will appear as a ticket on the left. The game is endless and you must try to survive 
-								as long as you can and try to get a high score.
+							<!-- Project Summary -->
+							<h2>Summary</h2>
+							<p>
+								<em>The Devil's Diner</em>, was created with a small team of developers for a large scale contest called 
+								<a href="https://ldjam.com/events/ludum-dare/50">Ludum Dare Game Jam #50</a>. Ludum Dare is one of the largest game jams in the world
+								that challenges participants to create a complete game in 72 hours based off of a particular theme. The theme chosen for this jam was "Every 10 Seconds" so we came up with the idea of a 
+								cooking game where every 10 seconds a new customer comes in. To put a unique spin on genre we made the aesthetic Hell inspired where the player must serve 
+								demons in the hopes of saving soul.
 							</p>
+							<!-- Gameplay Description -->
+							<h2>Gameplay</h2>
+							<p>
+								The player is given 5 stars at the start of a new run and can lose those stars if they fail to serve customers on time. Up to six demons can sit at the counter
+								and order food, an order will appear as a ticket on the left. The player must gather the correct ingredients for the dish while juggling other demon's orders in
+								the queue. The game is endless, challenging players to survive as long as possible while aiming for a high score.
+							</p>
+							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
 								<table>
@@ -65,22 +72,22 @@
 									<tbody>
 										<tr>
 											<td>Dynamic UI</td>
-											<td>Menu UI where the player can navigate through game elements. Ticket UI that shows the player 
-												the demon's order.
+											<td>
+												Includes a menu for navigating game elements such as ticket system, order display, demon aggression levels, and more.
 											</td>
 											<td></td>
 										</tr>
 										<tr>
 											<td>Global Leaderboard System</td>
-											<td>Leaderboard system that uses a web service to display a global leaderboard of all players who've played the game.</td>
+											<td>A leaderboard system that uses a third-party service to display global rankings of players worldwide.</td>
 										</tr>
 										<tr>
 											<td>Options Menu</td>
-											<td>Menu to tweak sound and music volume.</td>
+											<td>Menu to tweak sound and music volume levels.</td>
 										</tr>
 										<tr>
 											<td>Crafting System</td>
-											<td>Scalable system that allows the player to mix and match ingrediants to make meals.</td>
+											<td>Scalable system that allows the player to mix and match ingredients to make meals.</td>
 										</tr>
 										<tr>
 											<td>Dynamic Particle Systems</td>
@@ -88,52 +95,33 @@
 										</tr>
 										<tr>
 											<td>Intro Cutscene</td>
-											<td>Satan Cutscene with typewriter effect and shake effect.</td>
+											<td>Satan Cutscene includes a dialogue system with typewriter and shake effect.</td>
 										</tr>
 										<tr>
 											<td>Save System</td>
-											<td>File save for high score</td>
+											<td>File save system that utalizes a JSON format.</td>
 										</tr>
 										<tr>
 											<td>Music and Sound</td>
-											<td>Sounds found from free website and mixed. <a href="https://madness1184.itch.io/hells-kitchen">https://opengameart.org/</span></a></td>
+											<td>Sounds found from a free website and mixed. <a href="https://madness1184.itch.io/hells-kitchen">https://opengameart.org/</span></a></td>
 										</tr>
 									</tbody>
 								</table>
 							</div>
-
-							<!--
-							<span>
-								<ul style="width:40%; float:left;">
-									<li>Interactable UI</li>
-									<li>Global Leaderboard System</li>
-									<li>Options Menu</li>
-									<li>Crafting System</li>
-								 </ul>
-							  
-								 <ul style="width:40%; float:left;">
-									<li>Dynamic Particle Systems</li>
-									<li>Intro Cutscene</li>
-									<li>Save System</li>
-									<li>Music and Sound</li>
-								 </ul>
-							</span>
-							-->
-							<br>
-							<br>
+							<!-- Links -->
 							<ul class="icons">
 								<li>Link to Prototype - <a href="https://madcolors-entertainment.itch.io/the-devils-diner">https://madcolors-entertainment.itch.io/the-devils-diner</span></a></li>
+								<!-- TODO: Link GitHub once a tradmark has been applied to the repository -->
 							</ul>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
