--- a/unstable_star.html
+++ b/unstable_star.html
@@ -23,7 +23,7 @@
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="future_scape.html">Future Scape</a></li>
 						<li><a href="unstable_star.html" class="active">Unstable Star</a></li>
-						<li><a href="hells_kitchen.html">The Devil's Diner</a></li>
+						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<li><a href="star_raid.html">Star Raid</a></li>
 						<li><a href="fishy_business.html">Fishy Business</a></li>
@@ -39,23 +39,25 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<!-- Project Title -->
 							<h1 class="major">Unstable Star</h1>
-							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
 							<span class="image fit"><img src="images/bl_start.gif" alt="" /></span>
+							<!-- Project Summary -->
 							<h2>Summary</h2>
-							<p> Unstable Star was a game made in collaboration with the Video Game Developement Club at Arizona State University. This game features three
-								unique levels and two challenging boss fights. Embark on a lighthearted and action-packed journey of redemption. A former Border Guard 
-								for the Intragalactic Coalition, he quickly becomes embroiled in an unexpected Rebellion to save the galaxy. I was the vice president and
-								systems lead for the project. I overseed project management including, organizing and schedualing tasks for my team and mapping the
-								project timeline.
+							<p> 
+								<em>Unstable Star</em> was developed in collaboration with the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>
+								at Arizona State University. This game features three unique levels and two challenging boss fights. This action-packed, lighthearted adventure spans three 
+								unique levels and two challenging boss fights. Players play as a former Border Guard of the Intragalactic Coalition as he becomes entangled in a rebellion 
+								to save the galaxy. As the vice president and systems lead, I oversaw project management, task organization, and project scheduling.
 							</p>
+							<!-- Gameplay Description -->
 							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
-							<p> The gameplay for the game features 3 levels each with unique challenges. These challenges along with two different bosses add varience 
-								to the levels. Top down combat is crutial to the game's identity as a bullet hell. Swappable weapons and abilities are offered to the
-								player to encourage gameplay diversity. A dynamic dialogue system helps to convey character and life into the narritive.
-								
+							<p> 
+								<em>Unstable Star</em> features top-down bullet-hell combat across three levels, each with distinct challenges and unique boss fights. Swappable weapons
+								and abilities are offered to the player to encourage gameplay diversity, while a dynamic dialogue system brings the characters and narrative to life.
 							</p>
+							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
 								<table>
@@ -68,59 +70,62 @@
 									<tbody>
 										<tr>
 											<td>Objective System</td>
-											<td> Objectives for each level were made to give varience to each level. These objectives include kill all enemies, survive
-												for a set amount of time, and kill enemies in a set amount of time. The levels follow a linear progression based on 
-												this system.
+											<td> 
+												Each level includes a unique objective such as defeating all enemies, surviving for a set time, or eliminating enemies within a time limit.
+												The levels follow a linear progression based on this system.
 											</td>
-											<td></td>
 										</tr>
 										<tr>
 											<td>Wave System</td>
-											<td> Dynamic wave system that chooses from a pool of waves unique to each level.
+											<td> 
+												A dynamic wave system selects from a pool of unique waves for each level.
 											</td>
 											<td></td>
 										</tr>
 										<tr>
 											<td>Player Abilities</td>
-											<td>The player is given a small set of unique abilites. A Phase Shift ability gives the player invunerability frames for a set amount of time 
-												and a Pulse Bomb explodes and does damage over a large area. Each ability has a cooldown timer that communicates with the player's HUD to let the player
-												know when they can use it again. They also have a use counter that limits the amount of times it can be used.
+											<td>
+												Players use abilities like <em>Phase Shift</em> (temporary invulnerability) and <em>Pulse Bomb</em> (area damage), with cooldown timers and usage limits 
+												displayed on the HUD.
 											</td>
 										</tr>
 										<tr>
-											<td>Player Weapon Arsenal</td>
-											<td> The player has a variety of weapons they can use throughout the game. Each weapon can be unlocked as they complete levels.
-												 A pistol that has a slow fire rate, a laser weapon that can charge for higher amounts of damage and go through entities, and 
-												 a gatling weapon that fires very fast and has a cooldown for balance.
+											<td>Player Arsenal</td>
+											<td>
+												The player has access to a variety of weapons they can unlock throughout the game.
+												Unlockable weapons include the <em>Pistol</em> (slow fire rate), the <em>Laser Gun</em> (charge for more damage and pierce through enemies),
+												and the <em>Gatling Gun</em> (rapid fire with cooldown).
 											</td>
 										</tr>
 										<tr>
 											<td>Boss Fights</td>
-											<td> Game features two challenging boss fights. For the first boss the player needs to shoot shield generators to destroy a large
-												 bubble sheild. This boss can summon minions to aid in the battle. The second boss has a flury of attacks including a burst atttack,
-												 that send out a burst of bullets in a fan, and a sweep attack where the boss goes back and forth continuously firing bullets rapidly.								
+											<td> 
+												Game features two challenging boss fights. The first boss requires the destruction shield generators to disable his defenses,
+											    and defense against minions. The second boss has a flurry of attacks including a burst attack that sends out a burst of bullets in a fan,
+												and a sweep attack where the boss goes back and forth continuously firing bullets rapidly.								
 											</td>
 										</tr>
 										<tr>
 											<td>Dialogue System</td>
-											<td> Full and complete dialogue system with portrates of characters. Text is animated with a typewriter effect.
-												Over 8 cutscenes with dialogue and dialogue plays during gameplay.
+											<td> 
+												The game features a full dialogue system with animated typewriter text and character portraits. along with eight cutscenes
+												immerse the player in the narrative.
 											</td>
 										</tr>
 										<tr>
 											<td>Particle System and Shaders</td>
-											<td> The game features unique hit and destroy particles heavily inspired by arcade games. The explosion particles not only use high quality explosions from Unity's particle pack but
-												also voxels to elicite a 3D arcade-like effect. The hit effects reflect the type of entity damaged and change color using a combination of lightning particles and 2D sprites.
-												The player is given a special shader fresnel effect when hit.
+											<td> 
+												Visual effects are inspired by classic arcade games, featuring Unity’s Particle Pack and voxel-style effects made by members of the club.
 											</td>
 										</tr>
 										<tr>
 											<td>Music and Sound</td>
-											<td>Music and Sound made by very talented sound members from the club.</span></a></td>
+											<td>Original music and sound effects created by talented members of the club.</span></a></td>
 										</tr>
 									</tbody>
 								</table>
 							<br>
+							<!-- Links -->
 							<ul class="icons">
 								<li>Link to Game - <a href="https://heatwave-studios.itch.io/rogue-nebula">https://heatwave-studios.itch.io/rogue-nebula</span></a></li>
 								<li>Repository Link - <a href="https://github.com/GDCASU/SummerSession2023" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -134,7 +139,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
