--- a/star_raid.html
+++ b/star_raid.html
@@ -39,24 +39,29 @@
 				<!-- Main -->
 				<section id="main" class="wrapper">
 					<div class="inner">
+						<!-- Project Title -->
 						<h1 class="major">Star Raid</h1>
-						<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
 						<span class="image fit"><img src="images/star_gameplay_2.gif" alt="" /></span>
+						<span class="image fit"><img src="images/star_gameplay.gif" alt="" /></span>
+						<!-- Project Summary -->
 						<h2>Summary</h2>
-						<p>Star Raid is a game that I started with my friend back in 2020, we planned on making it into a full game but decided to 
+						<p>
+							Star Raid is a game that I started with my friend back in 2020, we planned on making it into a full game but decided to 
 							halt the progression due to the scope being too large and wanting to move onto a project more tangable. The game is set in Space
 							with a focus on multiplayer. The player(s) must try to survive against multiple waves of aleins that invade the ship that's stranded
 							in deep space.
 						</p>
-						<span class="image fit"><img src="images/star_gameplay.gif" alt="" /></span>
+						<!-- Gameplay Description -->
 						<h2>Gameplay</h2>
-						<p>The game starts in the hanger of the ship. The player(s) spawn near their crashed ship, they must explore and survive the alien waves that invade
+						<p>
+							The game starts in the hanger of the ship. The player(s) spawn near their crashed ship, they must explore and survive the alien waves that invade
 							the ship frequently. The ship is randomly generated which means that each run the loot and rooms on the ship change. Special rooms hold machines that
 							are vital to the ships functions. The radar helps locate valuable loot, the generator powers the ship and keeps the lights on, etc. The player(s)
 							must defend the machines as much as they can or risk their defense and scavage for loot. The players can craft items and structures that can help 
 							them defend the ship and repair. Some items require heavy defending as the container they are in can be easily destroyed by enemies. The end goal
 							is to repair their former ship, the big ship they are on, or take an escape pod.
 						</p>
+						<!-- Feature List -->
 						<h2>Implemented Features</h2>
 						<div class="table-wrapper">
 							<table>
@@ -112,6 +117,7 @@
 							</table>
 						</div>
 						<br>
+						<!-- Links -->
 						<ul class="icons">
 							<li>Repository Link - <a href="https://github.com/dev-rygy/Star-Raid" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -124,7 +130,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
