--- a/bloodlust.html
+++ b/bloodlust.html
@@ -71,7 +71,7 @@
 									<tbody>
 										<tr>
 											<td>Day and Night Cycles</td>
-											<td>The time scale of the game can effect the day/night cycle of the game. This in turn will affects NPC awareness during certain times.</td>
+											<td>The time scale of the game can affect the day/night cycle of the game. This in turn will affects NPC awareness during certain times.</td>
 											<td></td>
 										</tr>
 										<tr>
